tests/baselines/reference/parserMemberAccessorDeclaration14(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration14.ts(2,8): error TS1049: A 'set' accessor must have exactly one parameter.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration14.ts (1 errors) ====
    class C {
       set Foo(a: number, b: number) { }
           ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
    }